# PlayZork

./: .gitignore  .replit  CLAUDE.md  MEMORY_TOOL_PLAN.md  NOTES.md  PlayZork.sln  README.md  STATUS.md  pyproject.toml
AdventurerEngine/: Adventurer.cs  AdventurerResponse.cs  Builders.cs  LimitedStack.cs  Map.cs  Memory.cs  Prompts.cs  UniqueLimitedStack.cs
AdventurerEngine/DataStructure/: Map.cs  Memory.cs
Console/: Console.csproj  Program.cs
Engine/: Engine.csproj  GameResponse.cs  LimitedStack.cs  Memory.cs
Engine/GameApiClient/: ZorkApiClient.cs  ZorkApiRequest.cs  ZorkApiResponse.cs
IntegrationTest/: IntegrationTest.csproj
OpenAI/: ChatGPTClient.cs
PlayZork/VersionTwo/: main.py  zork_api_client.py  zork_service.py
VersionOne/: .gitignore
VersionOne/AdventurerEngine/: AdventurerEngine.csproj
VersionOne/Console/: ConsoleHelper.cs  Program.cs  appsettings.json
VersionOne/IntegrationTest/: ZorkApiClientTests.cs
VersionOne/OpenAI/: OpenAI.csproj  Request.cs
VersionTwo/: config.py  conftest.py  display_manager.py  game_logger.py  game_session.py  llm_utils.py  main.py  pytest.ini  test_display.py
VersionTwo/adventurer/: adventurer_response.py  adventurer_service.py  history_processor.py  openai_client.py  prompt_library.py
VersionTwo/docs/: WORLD_MODEL_PROPOSAL.md
VersionTwo/tests/: README.md  __init__.py  test_pathfinder.py
VersionTwo/tools/history/: __init__.py  (+3 more)
VersionTwo/zork/: zork_api_client.py  zork_api_request.py  zork_api_response.py  zork_service.py
ZorkEngine/: ZorkEngine.csproj
ZorkEngine/GameApiClient/: ZorkApiResponse.cs
(+35 files in other folders)
