[project]
name = "playzork"
version = "0.1.0"
description = "An experimental project using LLMs to autonomously play the classic text adventure game Zork"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.1.0",
    "langchain-openai>=0.0.5",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.2.1",
]
